# luajit-rocks

./: .gitignore  CMakeLists.txt  README.md
debian/: changelog  control  gbp.conf  luajit-rocks.install  rules
export/: luajit-rocks_1.0.1.dsc  luajit-rocks_1.0.1_all.deb  luajit-rocks_1.0.1_amd64.build  luajit-rocks_1.0.1_amd64.changes  luajit-rocks_1.0.2.dsc  luajit-rocks_1.0.2_all.deb  luajit-rocks_1.0.2_amd64.build  luajit-rocks_1.0.2_amd64.changes  luajit-rocks_1.0.3.dsc  luajit-rocks_1.0.3_all.deb  luajit-rocks_1.0.3_amd64.build  luajit-rocks_1.0.3_amd64.changes
lua-5.1/: CMakeLists.txt
lua-5.1-rc/: CMakeLists.txt
lua-5.1-rc/src/: lapi.c  lapi.h  lbaselib.c  lcode.c  ldebug.c  ldo.c  ldo.h  ldump.c  lfunc.c  lgc.c  linit.c  liolib.c  llex.c  llex.h  llimits.h  lobject.c  lobject.h  lparser.c  lstate.c  lstate.h  lstring.c  lstring.h  lstrlib.c  ltable.c  ltable.h  ltablib.c  ltm.c  ltm.h  lundump.c  lundump.h  lvm.c  lvm.h  lzio.h  print.c
lua-5.1/src/: lua.c  lua.h  luaconf.h.in
lua-5.2/: CMakeLists.txt
lua-5.2/src/: lua.h  luaconf.h.in
lua-5.3/: CMakeLists.txt
lua-5.3/src/: luaconf.h.in
luajit/: CMakeLists.txt
luajit-2.0/: CMakeLists.txt
luajit-2.0/cmake/: FindReadline.cmake
luajit-2.0/src/: lib_ffi.c  lj_cparse.c  lj_str.c  lua.h  luaconf.h  luajit.c
luajit-2.1/: CMakeLists.txt
luajit-2.1/doc/: dasc_indentation.dasc
luajit-2.1/dynasm/: dasm_ppc.lua
luajit-2.1/src/: Makefile  lib_ffi.c  lj_arch.h  lj_ccall.c  lj_ccall.h  lj_ccallback.c  lj_cparse.c  lj_frame.h  lj_str.c  lj_target_ppc.h  lua.h  luaconf.h  luajit.c  vm_ppc64.dasc
luajit-2.1/src/host/: buildvm_asm.c
luajit/src/: lj_alloc.c  luaconf.h  luajit.c
luarocks/: CMakeLists.txt  install.bat
luarocks/lfw/: luarocks_config.lua
luarocks/src/luarocks/: cfg.lua  config.lua.in  config.lua.win.in  site_config.lua.in
luarocks/src/luarocks/fs/: lua.lua
luarocks/src/luarocks/fs/x64/: tools.lua
scripts/: build-package.sh
scripts/pbuilder-env/: create-ubuntu-build-environment.sh
